# tm4c123-sensor-logger-firmware

./: .gitignore  CMakeLists.txt  README.md  architecture.html  readme2,md  toolchain-arm-none-eabi.cmake
.github/: copilot-instructions.md
CMSIS/Device/Inludes/: TM4C123.h  system_TM4C123.h
CMSIS/Device/Source/: startup.c  system_TM4C123.c
linker/: tm4c123.ld
src/ble/: BLE.c  BLE.h
src/core/: main.c  main.h  my_sensor.h
src/debug/: my_debug.c  my_debug.h
src/drivers/: my_i2c.c  my_i2c.h  my_uart.c  my_uart.h
src/middleware/: FreeRTOSConfig.h
src/sensor/: sensor.c  sensor.h
src/utils/: helper.c  helper.h
src/wdt/: WDT.c  WDT.h
tivaware/driver/: adc.c  aes.c  can.c  comp.c  crc.c  des.c  eeprom.c  emac.c  epi.c  flash.c  fpu.c  hibernate.c  lcd.c  mpu.c  onewire.c  pin_map.h  qei.c  shamd5.c  ssi.c  sysctl.c  sysctl.h  sysexc.c  timer.c  uart.c  udma.c  usb.c  watchdog.c
